--- a/Views/Landing_page.html
+++ b/Views/Landing_page.html
@@ -6,7 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="../Styles/landing_page.css">
 </head>
-<body>
-    
+<body class="bodyContainer">
+        <div class="youtubeHeaderContainer">
+            <div class="startContainer"></div>
+            <div class="searchBarContainer"></div>
+            <div class="buttonsContainer"></div>
+        </div>
 </body>
 </html>
