--- a/Views/Landing_page.html
+++ b/Views/Landing_page.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../Styles/landing_page.css">
-</head>
-<body class="bodyContainer">
-        <div class="youtubeHeaderContainer">
-            <div class="startContainer"></div>
-            <div class="searchBarContainer"></div>
-            <div class="buttonsContainer"></div>
-        </div>
-</body>
+    <link rel="stylesheet" href="../Styles/landing_page.css" />
+  </head>
+  <body class="bodyContainer">
+    <div class="headerContainer">
+      <div class="startContainer"></div>
+      <div class="searchBarContainer"></div>
+      <div class="buttonsContainer"></div>
+    </div>
+      <div class="filterContainer">
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+      </div>
+  </body>
 </html>
