Navigator and filter father was added. NavigatorContainer added

--- a/Views/Landing_page.html
+++ b/Views/Landing_page.html
@@ -10,8 +10,16 @@
     <div class="headerContainer">
       <div class="startContainer"></div>
       <div class="searchBarContainer"></div>
+      <div></div>
       <div class="buttonsContainer"></div>
     </div>
+    <div class="navigatorAndFilterContainer">
+      <div class="navigatorContainer">
+        <button class="navigatorButton"></button>
+        <button class="navigatorButton"></button>
+        <button class="navigatorButton"></button>
+        <button class="navigatorButton"></button>
+      </div>
       <div class="filterContainer">
         <button class="filterButton"></button>
         <button class="filterButton"></button>
@@ -30,5 +38,6 @@
         <button class="filterButton"></button>
         <button class="filterButton"></button>
       </div>
+    </div>
   </body>
 </html>
