--- a/Styles/landing_page.css
+++ b/Styles/landing_page.css
@@ -9,7 +9,7 @@
   height: 100vh;
   flex-direction: column;
   display: flex;
-  align-items: center;
+  align-items: start;
 }
 .headerContainer {
   background-color: #5759e9;
@@ -34,6 +34,30 @@
   background-color: #ff7300;
   width: 15%;
   height: 100%;
+}
+
+.navigatorAndFilterContainer{
+  height: 100%;
+  width: 100%;
+  background-color:#18ffff;
+  display: flex;
+  flex-direction: row;
+}
+/*Navigator needs new father for content and him*/
+.navigatorContainer{
+width: 4%;
+height: 100%;
+background-color:#5759e9;
+display: flex;
+flex-direction: column;
+}
+
+.navigatorButton{
+  background-color: #f80505;
+  width: 5%;
+  height: 5%;
+  padding: 0 24px;
+  margin: 12px;
 }
 
 .filterContainer {
