--- a/Views/Landing_page.html
+++ b/Views/Landing_page.html
@@ -13,30 +13,34 @@
       <div></div>
       <div class="buttonsContainer"></div>
     </div>
-    <div class="navigatorAndFilterContainer">
-      <div class="navigatorContainer">
-        <button class="navigatorButton"></button>
-        <button class="navigatorButton"></button>
-        <button class="navigatorButton"></button>
-        <button class="navigatorButton"></button>
+    <div class="navigatorAndFilterAndContentContainer">
+       <div class="navigatorContainer">
+          <button class="navigatorButton"></button>
+          <button class="navigatorButton"></button>
+          <button class="navigatorButton"></button>
+          <button class="navigatorButton"></button>
+        </div>
+      
+      <div class="filterAndContentContainer">
+        
+       <div class="filterContainer">
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
+        <button class="filterButton"></button>
       </div>
-      <div class="filterContainer">
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
       </div>
     </div>
   </body>
