--- a/Views/Landing_page.html
+++ b/Views/Landing_page.html
@@ -22,7 +22,7 @@
         </div>
       
       <div class="filterAndContentContainer">
-        
+
        <div class="filterContainer">
         <button class="filterButton"></button>
         <button class="filterButton"></button>
@@ -41,6 +41,7 @@
         <button class="filterButton"></button>
         <button class="filterButton"></button>
       </div>
+      <div class="contentContainer"></div>
       </div>
     </div>
   </body>
