--- a/Styles/landing_page.css
+++ b/Styles/landing_page.css
@@ -85,7 +85,11 @@ flex-direction: column;
   margin: 12px;
 }
 
-
+.contentContainer{
+  width: 100%;
+  height: 94%;
+  background-color:#6eda85
+}
 
 
 
