cardContentContainer added and the content elements

--- a/Views/Landing_page.html
+++ b/Views/Landing_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../Styles/landing_page.css" />
+    <link rel="stylesheet" href="../Styles/Landing_page.css" />
   </head>
   <body class="bodyContainer">
     <div class="headerContainer">
@@ -14,34 +14,112 @@
       <div class="buttonsContainer"></div>
     </div>
     <div class="navigatorAndFilterAndContentContainer">
-       <div class="navigatorContainer">
-          <button class="navigatorButton"></button>
-          <button class="navigatorButton"></button>
-          <button class="navigatorButton"></button>
-          <button class="navigatorButton"></button>
-        </div>
-      
-      <div class="filterAndContentContainer">
-
-       <div class="filterContainer">
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
-        <button class="filterButton"></button>
+      <div class="navigatorContainer">
+        <button class="navigatorButton"></button>
+        <button class="navigatorButton"></button>
+        <button class="navigatorButton"></button>
+        <button class="navigatorButton"></button>
       </div>
-      <div class="contentContainer"></div>
+
+      <div class="filterAndContentContainer">
+        <div class="filterContainer">
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+          <button class="filterButton"></button>
+        </div>
+        <div class="contentContainer">
+          <div class="cardContentContainer">
+            <div class="videoContent"></div>
+            <div class="detailContent">
+              <div class="iconChannel"></div>
+              <div class="textsContainer">
+                <div class="titleText"></div>
+                <div class="channelText"></div>
+                <div class="usersText"></div>
+                <div class="onLiveText"></div>
+              </div>
+              <div class="moreDetails"></div>
+            </div>
+          </div>
+          <div class="cardContentContainer">
+            <div class="videoContent"></div>
+            <div class="detailContent">
+              <div class="iconChannel"></div>
+              <div class="textsContainer">
+                <div class="titleText"></div>
+                <div class="channelText"></div>
+                <div class="usersText"></div>
+                <div class="onLiveText"></div>
+              </div>
+              <div class="moreDetails"></div>
+            </div>
+          </div>
+          <div class="cardContentContainer">
+            <div class="videoContent"></div>
+            <div class="detailContent">
+              <div class="iconChannel"></div>
+              <div class="textsContainer">
+                <div class="titleText"></div>
+                <div class="channelText"></div>
+                <div class="usersText"></div>
+                <div class="onLiveText"></div>
+              </div>
+              <div class="moreDetails"></div>
+            </div>
+          </div>
+          <div class="cardContentContainer">
+            <div class="videoContent"></div>
+            <div class="detailContent">
+              <div class="iconChannel"></div>
+              <div class="textsContainer">
+                <div class="titleText"></div>
+                <div class="channelText"></div>
+                <div class="usersText"></div>
+                <div class="onLiveText"></div>
+              </div>
+              <div class="moreDetails"></div>
+            </div>
+          </div>
+          <div class="cardContentContainer">
+            <div class="videoContent"></div>
+            <div class="detailContent">
+              <div class="iconChannel"></div>
+              <div class="textsContainer">
+                <div class="titleText"></div>
+                <div class="channelText"></div>
+                <div class="usersText"></div>
+                <div class="onLiveText"></div>
+              </div>
+              <div class="moreDetails"></div>
+            </div>
+          </div>
+          <div class="cardContentContainer">
+            <div class="videoContent"></div>
+            <div class="detailContent">
+              <div class="iconChannel"></div>
+              <div class="textsContainer">
+                <div class="titleText"></div>
+                <div class="channelText"></div>
+                <div class="usersText"></div>
+                <div class="onLiveText"></div>
+              </div>
+              <div class="moreDetails"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
