--- a/Styles/landing_page.css
+++ b/Styles/landing_page.css
@@ -88,7 +88,76 @@ flex-direction: column;
 .contentContainer{
   width: 100%;
   height: 94%;
-  background-color:#6eda85
+  background-color:#6eda85;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 1%;
+}
+
+.cardContentContainer{
+  width: 32%;
+  height: 49%;
+  
+  margin-right: 1%;
+  display: flex;
+  flex-direction: column;
+}
+.videoContent{
+width: 100%;
+height: 80%;
+border-radius: 4%;
+background-color: #5759e9;
+}
+
+.detailContent{
+width: 100%;
+height: 20%;
+background-color: #ff7300;
+display: flex;
+flex-direction: row;
+}
+
+/*1st element*/
+.iconChannel{
+width: 10%;
+height: 65%;
+background-color: #ff00f2;
+}
+
+/*2nd elements*/
+.textsContainer{
+width: 85%;
+height: 100%;
+background-color: #648a82;
+display: flex;
+flex-direction: column;
+}
+.titleText{
+width: 100%;
+height: 40%;
+background-color: #00f7ff;
+}
+.channelText{
+width: 80%;
+height: 20%;
+background-color: #00ff22;
+}
+.usersText{
+width: 80%;
+height: 20%;
+background-color: #ffd102;
+}
+.onLiveText{
+width: 80%;
+height: 20%;
+background-color: #ff5100;
+}
+
+/*3rd elements*/
+.moreDetails{
+width: 5%;
+height: 50%;
+background-color: #fccff9;
 }
 
 
