--- a/Views/Landing_page.html
+++ b/Views/Landing_page.html
@@ -46,12 +46,22 @@
             <div class="detailContent">
               <div class="iconChannel"></div>
               <div class="textsContainer">
-                <div class="titleText"></div>
-                <div class="channelText"></div>
-                <div class="usersText"></div>
+                <div class="titleText">
+                  <h4>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  </h4>
+                </div>
+                <div class="channelText">
+                  <span> Lorem ipsum </span>
+                </div>
+                <div class="visualizationsNumberAndUploadTimeText">
+                  <span> 27 K visualizaciones • hace 3 horas </span>
+                </div>
                 <div class="onLiveText"></div>
               </div>
-              <div class="moreDetails"></div>
+              <div class="moreDetails">
+                <button class="moreDetailsButton"></button>
+              </div>
             </div>
           </div>
           <div class="cardContentContainer">
@@ -59,12 +69,22 @@
             <div class="detailContent">
               <div class="iconChannel"></div>
               <div class="textsContainer">
-                <div class="titleText"></div>
-                <div class="channelText"></div>
-                <div class="usersText"></div>
+                 <div class="titleText">
+                  <h4>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  </h4>
+                </div>
+                <div class="channelText">
+                  <span> Lorem ipsum </span>
+                </div>
+                <div class="visualizationsNumberAndUploadTimeText">
+                  <span> 27 K visualizaciones • hace 3 horas </span>
+                </div>
                 <div class="onLiveText"></div>
               </div>
-              <div class="moreDetails"></div>
+              <div class="moreDetails">
+                <button class="moreDetailsButton"></button>
+              </div>
             </div>
           </div>
           <div class="cardContentContainer">
@@ -72,12 +92,22 @@
             <div class="detailContent">
               <div class="iconChannel"></div>
               <div class="textsContainer">
-                <div class="titleText"></div>
-                <div class="channelText"></div>
-                <div class="usersText"></div>
+                <div class="titleText">
+                  <h4>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  </h4>
+                </div>
+                <div class="channelText">
+                  <span> Lorem ipsum </span>
+                </div>
+                <div class="visualizationsNumberAndUploadTimeText">
+                  <span> 27 K visualizaciones • hace 3 horas </span>
+                </div>
                 <div class="onLiveText"></div>
               </div>
-              <div class="moreDetails"></div>
+              <div class="moreDetails">
+                <button class="moreDetailsButton"></button>
+              </div>
             </div>
           </div>
           <div class="cardContentContainer">
@@ -85,12 +115,22 @@
             <div class="detailContent">
               <div class="iconChannel"></div>
               <div class="textsContainer">
-                <div class="titleText"></div>
-                <div class="channelText"></div>
-                <div class="usersText"></div>
+                <div class="titleText">
+                  <h4>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  </h4>
+                </div>
+                <div class="channelText">
+                  <span> Lorem ipsum </span>
+                </div>
+                <div class="visualizationsNumberAndUploadTimeText">
+                  <span> 27 K visualizaciones • hace 3 horas </span>
+                </div>
                 <div class="onLiveText"></div>
               </div>
-              <div class="moreDetails"></div>
+              <div class="moreDetails">
+                <button class="moreDetailsButton"></button>
+              </div>
             </div>
           </div>
           <div class="cardContentContainer">
@@ -98,12 +138,22 @@
             <div class="detailContent">
               <div class="iconChannel"></div>
               <div class="textsContainer">
-                <div class="titleText"></div>
-                <div class="channelText"></div>
-                <div class="usersText"></div>
+                <div class="titleText">
+                  <h4>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  </h4>
+                </div>
+                <div class="channelText">
+                  <span> Lorem ipsum </span>
+                </div>
+                <div class="visualizationsNumberAndUploadTimeText">
+                  <span> 27 K visualizaciones • hace 3 horas </span>
+                </div>
                 <div class="onLiveText"></div>
               </div>
-              <div class="moreDetails"></div>
+              <div class="moreDetails">
+                <button class="moreDetailsButton"></button>
+              </div>
             </div>
           </div>
           <div class="cardContentContainer">
@@ -111,12 +161,22 @@
             <div class="detailContent">
               <div class="iconChannel"></div>
               <div class="textsContainer">
-                <div class="titleText"></div>
-                <div class="channelText"></div>
-                <div class="usersText"></div>
+                <div class="titleText">
+                  <h4>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  </h4>
+                </div>
+                <div class="channelText">
+                  <span> Lorem ipsum </span>
+                </div>
+                <div class="visualizationsNumberAndUploadTimeText">
+                  <span> 27 K visualizaciones • hace 3 horas </span>
+                </div>
                 <div class="onLiveText"></div>
               </div>
-              <div class="moreDetails"></div>
+              <div class="moreDetails">
+                <button class="moreDetailsButton"></button>
+              </div>
             </div>
           </div>
         </div>
