--- a/Views/index.html
+++ b/Views/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles/Landing_page.css" />
   </head>
   <body class="bodyContainer">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <div class="headerContainer">
-      <div class="startContainer"></div>
+      <div class="menuAndLogoContainer">
+
+      </div>
       <div class="searchBarContainer"></div>
       <div></div>
       <div class="buttonsContainer"></div>
@@ -69,7 +73,7 @@
             <div class="detailContent">
               <div class="iconChannel"></div>
               <div class="textsContainer">
-                 <div class="titleText">
+                <div class="titleText">
                   <h4>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   </h4>
